# TravelApp

./: .dockerignore  .env.example  .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  MAIN_BEFORE_FRONTEND_SLICE1.txt  PROJECT_STATE.md  README.md  TECH-STACK.md  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt
.claude/agents/: architect.md  build-error-resolver.md  code-reviewer.md  database-reviewer.md  designer.md  e2e-runner.md  planner.md  refactor-cleaner.md  security-reviewer.md  tdd-guide.md
.cursor/: mcp.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
backend/app/: dependencies.py  main.py  middleware.py
backend/docs/: logging-setup.md
backend/scripts/: bench_itinerary.py  measure_itinerary_live.py  verify_route.py
backend/tests/: conftest.py  test_auth_jwt.py  test_config.py  test_error_sanitization.py  test_google_cost_guard.py  test_google_list_import.py  test_google_list_import_service.py  test_google_list_import_stream.py  test_google_places_client.py  test_google_places_live.py  test_health_endpoint.py  test_itinerary_days.py  test_itinerary_days_reorder_generate.py  test_itinerary_options.py  test_itinerary_routes_update.py  test_itinerary_schemas.py  test_itinerary_tree.py  (+31 more)
docs/: CHANGELOG.md
frontend/: .env.e2e.example  .gitignore  .prettierignore  DESIGN.md  README.md  package-lock.json  package.json  playwright.config.ts  playwright.itinerary.config.ts  tailwind.config.ts  tsconfig.json
supabase/: check_remote_schema.py  check_schema_dependents.py  schema.sql
(+304 files in other folders)
