[project]
name = "travelapp"
version = "0.1.0"
description = "Backend-driven travel planning app"
requires-python = ">=3.12"
dependencies = [
    "structlog>=24.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "B008",  # do not perform function calls in argument defaults (needed for Depends())
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = ["live: marks tests as live integration tests that hit real external APIs (deselect with '-m not live')"]
addopts = "-m 'not live'"

[tool.pyright]
venvPath = "."
venv = ".venv"
